tests/invalid/all_wrong_arg_count/main.py
x: bool = all([1], [0])
